--- a/index.html
+++ b/index.html
@@ -1,1 +1,331 @@
-Hello World
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dylan Bohlender's Portfolio</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
+                <a href="#certifications">Certifications</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
+
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Dylan Bohlender</h1>
+            <h2>Software Engineer</h2>
+            <a href="assets/Dylan Bohlender Resume 2018:05.pdf" class="btn-rounded-white" download="DylanBohlenderResume.pdf">Download Resume</a>
+        </div>
+        <!-- End #lead-content -->
+
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
+                </div>
+                <div class="col-md-8">
+                    <p>I’m a Software Engineer well-versed in mobile, web, and enterprise SaaS development.</p>
+                    <p>I've dabbled in the IoT and blockchain spaces as well.</p>
+                    <br/>
+                    <p>I also make games for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
+                    <br/>
+                    <p>When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="Feb 2017 – Present">
+                <h3>Apto</h3>
+                <h4>Software Engineer</h4>
+                <p><i>Helping commercial real estate brokers by building SaaS workflow tools they love</i></p><br/>
+                <ul>
+                    <li>Engineered a $2.4m customized version of our enterprise product for a major brokerage</li>
+                    <li>Spearheaded an initiative to architect, build, and maintain Apto’s internal data warehouse</li>
+                    <li>Wrote code for core products, one-off internal applications, and strategic reporting</li>
+                </ul>
+            </div>
+
+            <div data-date="Jun 2015 – Feb 2017">
+                <h3>Deloitte Digital</h3>
+                <h4>Full Stack Software Engineer / Consultant</h4>
+                <p><i>Implementing large-scale SaaS transformations for big businesses and governments</i></p><br/>
+                <ul>
+                    <li>Solved business problems for large consulting clients using Salesforce.com and Heroku</li>
+                    <li>Architected and coded solutions (Apex, Visualforce, and Lightning)</li>
+                    <li>Managed small cross-functional Agile teams as Tech Lead</li>
+                </ul>
+            </div>
+
+            <div data-date="Sep 2014 – Jun 2015">
+                <h3>University of Denver</h3>
+                <h4>Graduate Teaching Assistant</h4>
+                <p><i>Educating our youth, one plagiarism-detecting program at a time</i></p><br/>
+                <ul>
+                    <li>Lectured undergraduate Computer Science students in a variety of courses</li>
+                    <li>Graded assignments and maintained office hours</li>
+                    <li>Proctored undergraduate exams and ran lab exercises</li>
+                </ul>
+            </div>
+
+            <div data-date="Jun 2014 – Sep 2014">
+                <h3>iOS Software Engineering Intern</h3>
+                <h4>POSSIBLE Mobile / Double Encore</h4>
+                <p><i>Making best-in-class mobile apps for brands consumers love</i></p><br/>
+                <ul>
+                    <li>Wrote iOS code (Objective-C) for Fortune 500 companies' apps</li>
+                    <li>Interfaced heavily with design and project management teams</li>
+                    <li>Delivered amazing mobile applications to clients</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience -->
+
+    <div id="projects">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/gasguzzler.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Gas Guzzler Robots</h3>
+                        <h4>Ethereum Blockchain Application</h4>
+                        <p>Myself and several Apto coworkers participated in the ETHDenver Hackathon in 2018, where our project placed as one of seven runners-up. We wrote a smart contract and an accompanying front-end application that allowed users who submitted "out of gas" Ethereum transactions to claim unique crypto-collectibles called "Gas Guzzler Robots" for resale. We used the ERC721 non-fungible token spec to achieve this.</p>
+                        <a href="https://devpost.com/software/gas-guzzler" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/jetsam.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Jetsam</h3>
+                        <h4>iOS Game</h4>
+                        <p>Jetsam is a SpriteKit puzzle game currently in development by Zonzle LLC, a company I incorporated specifically for the purpose. The game continues to become ever more complex as I’ve added new puzzle mechanics and even a full-fledged in-app level editor that losslessly encodes custom level data into a shareable ASCII string. The art and UX are not yet finalized, so forgive the placeholder assets!</p>
+                        <!--<a href="#" target="_blank">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/foozlander.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Foozlander</h3>
+                        <h4>Internet-connected Foosball</h4>
+                        <p>At Deloitte Digital, I helped develop “Project Foozlander” – an IoT-enabled foosball table we demonstrated at Dreamforce 2015. We used breakbeam sensors, a Raspberry Pi, and an Arduino inside the table to interpret and send goal-scoring data to a Salesforce backend. An RFID scanner then allowed us to associate player accounts with conference badges. I took things to the next level by writing an Elo ranking algorithm which tracked players’ skill ratings, a public-facing rankings web page, and a custom Slack integration.</p>
+                        <a href="https://vimeo.com/137149365" target="_blank">View Project Video</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+            </div>
+        </div>
+    </div>
+    <!-- End #projects -->
+
+    <div id="education" class="background-alt">
+            <h2 class="heading">Education</h2>
+            <div class="education-block">
+                <h3>University of Denver</h3>
+                <span class="education-date">2014 - 2015</span>
+                <h4>Master of Science, Computer Science<br/>Cum Laude, 3.88 GPA</h4>
+            </div>
+            <!-- End .education-block -->
+    
+            <div class="education-block">
+                <h3>University of Denver</h3>
+                <span class="education-date">2010 - 2014</span>
+                <h4>Bachelor of Science, Computer Science<br/>Cum Laude, 3.96 GPA</h4>
+            </div>
+            <!-- End .education-block -->
+    
+            <div class="education-block">
+                <h3>University of Denver</h3>
+                <span class="education-date">2010 - 2014</span>
+                <h4>Bachelor of Science in Business Administration, Management<br/>Summa Cum Laude, 4.00 GPA</h4>
+            </div>
+            <!-- End .education-block -->
+        </div>
+    <!-- End #education -->
+
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Apex</li>
+            <li>Visualforce</li>
+            <li>C</li>
+            <li>C++</li>
+            <li>Swift</li>
+            <li>Objective-C</li>
+            <li>Solidity</li>
+            <li>MySQL</li>
+            <li>MSSQL</li>
+            <li>PostgreSQL</li>
+            <li>Redis</li>
+            <li>REST</li>
+            <li>SOAP</li>
+            <li>Salesforce</li>
+            <li>Angular</li>
+            <li>Node.js</li>
+            <li>Koa.js</li>
+            <li>Express.js</li>
+            <li>jQuery</li>
+            <li>AWS Lambda</li>
+            <li>Serverless</li>
+            <li>Terraform</li>
+            <li>Heroku</li>
+            <li>iOS</li>
+            <li>Docker</li>
+            <li>Git</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
+    <div id="certifications" class="background-alt">
+        <h2 class="heading">Certifications</h2>
+        <div class="certifications-block">
+            <h3>Salesforce Certified Platform Developer I</h3>
+            <span class="certifications-date">Jan 2017 - present</span>
+            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 16786301</a></h4>
+        </div>
+        <!-- End .certifications-block -->
+
+        <div class="certifications-block">
+            <h3>Salesforce Certified Administrator</h3>
+            <span class="certifications-date">Jan 2016 - present</span>
+            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 4620169</a></h4>
+        </div>
+        <!-- End .certifications-block -->
+
+        <div class="certifications-block">
+            <h3>Salesforce Certified Platform App Builder</h3>
+            <span class="certifications-date">Dec 2015 - present</span>
+            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 3941024</a></h4>
+        </div>
+        <!-- End .certifications-block -->
+    </div>
+    <!-- End #certifications -->
+
+    <div id="contact">
+        <h2>Feel free to @ me</h2>
+        <div id="contact-form">
+            <form method="POST" action="https://formspree.io/dylan.bohlender@gmail.com">
+                <input type="hidden" name="_subject" value="Contact request from DylanBohlender.com" />
+                <input type="email" name="_replyto" placeholder="Your email address" required>
+                <textarea name=/"message" placeholder="Your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <!-- End #contact-form -->
+    </div>
+    <!-- End #contact -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 copyright">
+                    <p>Copyright &copy; 2018 DYLAN BOHLENDER</p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://www.linkedin.com/in/dylanbohlender/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/DylanBohlender/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://stackoverflow.com/users/10016554/dylan-bohlender" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://news.ycombinator.com/user?id=DylanBohlender" target="_blank"><i class="fa fa-hacker-news" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/index.js"></script>
+</body>
+
+</html>
