Added games page and link to it via main page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>I’m a Software Engineer well-versed in mobile, web, and enterprise SaaS development.</p>
                     <p>I've dabbled in the IoT and blockchain spaces as well.</p>
                     <br/>
-                    <p>I also make games for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
+                    <p>I also make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
                     <br/>
                     <p>When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
                 </div>
