Responsive games page iframe and images

--- a/games.html
+++ b/games.html
@@ -60,7 +60,7 @@
         <h3>Halo 5: Guardians Multiplayer Minigame</h3>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col video-container">
                     <p align="center"><iframe src="https://www.youtube.com/embed/-0tQqnHj098" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p align="center"><img src="images/slushed.png" width="560" height="315"/></p>
+                    <p align="center"><img src="images/slushed.png"/></p>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p align="center"><img src="images/nowhere.png" width="560" height="315"/></p>
+                    <p align="center"><img src="images/nowhere.png"/></p>
                 </div>
             </div>
         </div>
