--- a/index.html
+++ b/index.html
@@ -255,23 +255,30 @@
 
     <div id="certifications" class="background-alt">
         <h2 class="heading">Certifications</h2>
+	<div class="certifications-block">
+            <h3>Certified Blockchain Programmer</h3>
+            <span class="certifications-date">Jul 2018</span>
+            <h4><a href="http://programmingblockchain.com/certificates/3017c992b709bd81fe26.txt" target="_blank"><i class="fa fa-btc" aria-hidden="true"></i> PGP signed E-certificate</a></h4>
+        </div>
+        <!-- End .certifications-block -->
+	    
         <div class="certifications-block">
             <h3>Salesforce Certified Platform Developer I</h3>
-            <span class="certifications-date">Jan 2017 - present</span>
+            <span class="certifications-date">Jan 2017</span>
             <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 16786301</a></h4>
         </div>
         <!-- End .certifications-block -->
 
         <div class="certifications-block">
             <h3>Salesforce Certified Administrator</h3>
-            <span class="certifications-date">Jan 2016 - present</span>
+            <span class="certifications-date">Jan 2016</span>
             <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 4620169</a></h4>
         </div>
         <!-- End .certifications-block -->
 
         <div class="certifications-block">
             <h3>Salesforce Certified Platform App Builder</h3>
-            <span class="certifications-date">Dec 2015 - present</span>
+            <span class="certifications-date">Dec 2015</span>
             <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 3941024</a></h4>
         </div>
         <!-- End .certifications-block -->
