Switch static game image for gif

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/jetsam.png" />
+                        <img src="images/jetsam.gif" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
