--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="project-info">
                         <h3>Jetsam</h3>
                         <h4>iOS Game</h4>
-                        <p>Jetsam is a SpriteKit puzzle game currently in development by Zonzle LLC, a company I incorporated specifically for the purpose. The game continues to become ever more complex as I’ve added new puzzle mechanics and even a full-fledged in-app level editor that losslessly encodes custom level data into a shareable ASCII string. The art and UX are not yet finalized, so forgive the placeholder assets!</p>
+                        <p>Jetsam is a SpriteKit puzzle game currently in development by Zonzle LLC, a company I incorporated specifically for the purpose. The game has over one hundred unique puzzles and a full-fledged in-app level editor that losslessly encodes custom level data into a shareable ASCII string. The art and UX are not yet finalized, so forgive the placeholder assets!</p>
                         <!--<a href="#" target="_blank">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
@@ -256,7 +256,7 @@
     <div id="certifications" class="background-alt">
         <h2 class="heading">Certifications</h2>
 	<div class="certifications-block">
-            <h3>Certified Blockchain Programmer</h3>
+            <h3>Programming Blockchain Certificate</h3>
             <span class="certifications-date">Jul 2018</span>
             <h4><a href="http://programmingblockchain.com/certificates/3017c992b709bd81fe26.txt" target="_blank"><i class="fa fa-btc" aria-hidden="true"></i> PGP signed E-certificate</a></h4>
         </div>
