Flavor text update

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <h4>Software Engineer</h4>
                 <p><i>Helping commercial real estate brokers by building SaaS workflow tools they love</i></p><br/>
                 <ul>
-                    <li>Engineered a $2.4m customized version of our enterprise product for a major brokerage</li>
-                    <li>Spearheaded an initiative to architect, build, and maintain Apto’s internal data warehouse</li>
-                    <li>Wrote code for core products, one-off internal applications, and strategic reporting</li>
+                    <li>Engineered a $2.4m customized version of our core enterprise product for a major brokerage</li>
+                    <li>Spearheaded an initiative to architect, build, &amp; maintain Apto’s internal data warehouse</li>
+                    <li>Wrote JavaScript/TypeScript/Python code for core SaaS products, RESTful APIs, &amp; internal apps</li>
                 </ul>
             </div>
 
@@ -106,8 +106,8 @@
                 <h4>Full Stack Software Engineer / Consultant</h4>
                 <p><i>Implementing large-scale SaaS transformations for big businesses and governments</i></p><br/>
                 <ul>
-                    <li>Solved business problems for large consulting clients using Salesforce.com and Heroku</li>
-                    <li>Architected and coded solutions (Apex, Visualforce, and Lightning)</li>
+                    <li>Solved business problems for large consulting clients using Salesforce.com &amp; Heroku</li>
+                    <li>Architected &amp; coded solutions in Apex (Java), Visualforce (HTML/CSS), &amp; Lightning (JavaScript)</li>
                     <li>Managed small cross-functional Agile teams as Tech Lead</li>
                 </ul>
             </div>
@@ -118,8 +118,8 @@
                 <p><i>Educating our youth, one plagiarism-detecting program at a time</i></p><br/>
                 <ul>
                     <li>Lectured undergraduate Computer Science students in a variety of courses</li>
-                    <li>Graded assignments and maintained office hours</li>
-                    <li>Proctored undergraduate exams and ran lab exercises</li>
+                    <li>Graded assignments &amp; maintained office hours</li>
+                    <li>Proctored undergraduate exams &amp; ran lab exercises</li>
                 </ul>
             </div>
 
@@ -128,8 +128,8 @@
                 <h4>POSSIBLE Mobile / Double Encore</h4>
                 <p><i>Making best-in-class mobile apps for brands consumers love</i></p><br/>
                 <ul>
-                    <li>Wrote iOS code (Objective-C) for Fortune 500 companies' apps</li>
-                    <li>Interfaced heavily with design and project management teams</li>
+                    <li>Wrote Objective-C code for Fortune 500 companies' iOS apps</li>
+                    <li>Interfaced heavily with graphic design, UX design, &amp; project management teams</li>
                     <li>Delivered amazing mobile applications to clients</li>
                 </ul>
             </div>
