Reduce line lengths on resume bullet points

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <h4>Software Engineer</h4>
                 <p><i>Helping commercial real estate brokers by building SaaS workflow tools they love</i></p><br/>
                 <ul>
-                    <li>Engineered a $2.4m customized version of our core enterprise product for a major brokerage</li>
+                    <li>Engineered a $2.4m customized version of our enterprise product for a major brokerage</li>
                     <li>Spearheaded an initiative to architect, build, &amp; maintain Apto’s internal data warehouse</li>
-                    <li>Wrote JavaScript/TypeScript/Python code for core SaaS products, RESTful APIs, &amp; internal apps</li>
+                    <li>Wrote JavaScript/TypeScript/Python code for SaaS products, RESTful APIs, &amp; internal apps</li>
                 </ul>
             </div>
 
@@ -107,7 +107,7 @@
                 <p><i>Implementing large-scale SaaS transformations for big businesses and governments</i></p><br/>
                 <ul>
                     <li>Solved business problems for large consulting clients using Salesforce.com &amp; Heroku</li>
-                    <li>Architected &amp; coded solutions in Apex (Java), Visualforce (HTML/CSS), &amp; Lightning (JavaScript)</li>
+                    <li>Architected &amp; coded solutions in Apex, Visualforce, &amp; Lightning</li>
                     <li>Managed small cross-functional Agile teams as Tech Lead</li>
                 </ul>
             </div>
