Update website to include BlueSuit info

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>I’m a Software Engineer well-versed in mobile, web, and enterprise SaaS development.</p>
+                    <p>I’m a Software Engineer well-versed in web, mobile, and enterprise SaaS development.</p>
                     <p>I've dabbled in the IoT and blockchain spaces as well.</p>
                     <br/>
                     <p>I also make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
@@ -90,7 +90,18 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Feb 2017 – Present">
+            <div data-date="Jan 2019 – Present">
+                <h3>BlueSuit</h3>
+                <h4>Co-Founder/CTO</h4>
+                <p><i>Bringing the power of AI to commercial real estate brokers, teams, and investors</i></p><br/>
+                <ul>
+                    <li>Architected and built the entire BlueSuit MVP (frontend, backend, and database)</li>
+                    <li>Completed the 3-month <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a> with my cofounders</li>
+                    <li>More to come...</li>
+                </ul>
+            </div>
+
+            <div data-date="Feb 2017 – Jan 2019">
                 <h3>Apto</h3>
                 <h4>Software Engineer</h4>
                 <p><i>Helping commercial real estate brokers by building SaaS workflow tools they love</i></p><br/>
@@ -218,30 +229,34 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>Java</li>
+            <li>Python</li>
             <li>JavaScript</li>
             <li>TypeScript</li>
             <li>HTML</li>
             <li>CSS</li>
-            <li>Apex</li>
-            <li>Visualforce</li>
+            <li>Java</li>
             <li>C</li>
             <li>C++</li>
             <li>Swift</li>
             <li>Objective-C</li>
             <li>Solidity</li>
+            <li>Apex</li>
+            <li>Visualforce</li>
+            <li>PostgreSQL</li>
             <li>MySQL</li>
             <li>MSSQL</li>
-            <li>PostgreSQL</li>
             <li>Redis</li>
             <li>REST</li>
             <li>SOAP</li>
             <li>Salesforce</li>
+            <li>React</li>
             <li>Angular</li>
+            <li>Django</li>
             <li>Node.js</li>
             <li>Koa.js</li>
             <li>Express.js</li>
             <li>jQuery</li>
+            <li>AWS S3</li>
             <li>AWS Lambda</li>
             <li>Serverless</li>
             <li>Terraform</li>
@@ -265,21 +280,21 @@
         <div class="certifications-block">
             <h3>Salesforce Certified Platform Developer I</h3>
             <span class="certifications-date">Jan 2017</span>
-            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 16786301</a></h4>
+            <h4><a href="https://trailhead.salesforce.com/credentials/certification-detail-print?searchString=m4eO2dOL4dMwv1c3NGudg8GyqkHorQcAR8ezfTo2FNqmLzpomSd03OfjSYq8RTM4" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 16786301</a></h4>
         </div>
         <!-- End .certifications-block -->
 
         <div class="certifications-block">
             <h3>Salesforce Certified Administrator</h3>
             <span class="certifications-date">Jan 2016</span>
-            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 4620169</a></h4>
+            <h4><a href="https://trailhead.salesforce.com/credentials/certification-detail-print?searchString=m4eO2dOL4dMwv1c3NGudg8GyqkHorQcAR8ezfTo2FNqmLzpomSd03OfjSYq8RTM4" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 4620169</a></h4>
         </div>
         <!-- End .certifications-block -->
 
         <div class="certifications-block">
             <h3>Salesforce Certified Platform App Builder</h3>
             <span class="certifications-date">Dec 2015</span>
-            <h4><a href="http://certification.salesforce.com/certification-detail?conId=003G000002R0lXeIAJ" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 3941024</a></h4>
+            <h4><a href="https://trailhead.salesforce.com/credentials/certification-detail-print?searchString=m4eO2dOL4dMwv1c3NGudg8GyqkHorQcAR8ezfTo2FNqmLzpomSd03OfjSYq8RTM4" target="_blank"><i class="fa fa-cloud" aria-hidden="true"></i> License 3941024</a></h4>
         </div>
         <!-- End .certifications-block -->
     </div>
