Update title to Senior because why not

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Dylan Bohlender</h1>
-            <h2>Software Engineer</h2>
+            <h2>Senior Software Engineer</h2>
             <a href="assets/Dylan Bohlender Resume 2019:09.pdf" class="btn-rounded-white" download="Dylan Bohlender Resume.pdf">Download Resume</a>
         </div>
         <!-- End #lead-content -->
