Update skills list to be more modern

--- a/index.html
+++ b/index.html
@@ -242,25 +242,23 @@
             <li>Solidity</li>
             <li>Apex</li>
             <li>Visualforce</li>
+            <li>React</li>
+            <li>Angular</li>
+            <li>Apollo</li>
+            <li>GraphQL</li>
+            <li>REST</li>
+            <li>Node</li>
+            <li>Koa</li>
+            <li>Express</li>
+            <li>Salesforce</li>
+            <li>Django</li>
+            <li>Heroku</li>
+            <li>AWS</li>
+            <li>Terraform</li>
+            <li>Serverless</li>
             <li>PostgreSQL</li>
             <li>MySQL</li>
             <li>MSSQL</li>
-            <li>Redis</li>
-            <li>REST</li>
-            <li>SOAP</li>
-            <li>Salesforce</li>
-            <li>React</li>
-            <li>Angular</li>
-            <li>Django</li>
-            <li>Node.js</li>
-            <li>Koa.js</li>
-            <li>Express.js</li>
-            <li>jQuery</li>
-            <li>AWS S3</li>
-            <li>AWS Lambda</li>
-            <li>Serverless</li>
-            <li>Terraform</li>
-            <li>Heroku</li>
             <li>iOS</li>
             <li>Docker</li>
             <li>Git</li>
