--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Dylan Bohlender</h1>
-            <h2>Senior Software Engineer</h2>
-            <a href="assets/Dylan Bohlender Resume 2019:09.pdf" class="btn-rounded-white" download="Dylan Bohlender Resume.pdf">Download Resume</a>
+            <h2>Senior Software Engineer / Engineering Manager</h2>
+            <a href="assets/Dylan Bohlender Resume 2020:08.pdf" class="btn-rounded-white" download="Dylan Bohlender Resume.pdf">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -75,12 +75,11 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>I’m a Software Engineer well-versed in web, mobile, and enterprise SaaS development.</p>
-                    <p>I've dabbled in the IoT and blockchain spaces as well.</p>
+                    <p>I’m a Senior Software Engineer or Engineering Manager - whatever the situation requires. I'm well-versed in web, mobile, cloud, and enterprise SaaS development.</p>
                     <br/>
-                    <p>I also make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
+                    <p>As an IC I'm capable at all layers of the software stack; as a manager I'm capable of managing engineers of all skill levels.</p>
                     <br/>
-                    <p>When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
+                    <p>I also make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games. When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
                 </div>
             </div>
         </div>
@@ -93,11 +92,11 @@
             <div data-date="Jan 2019 – Present">
                 <h3>BlueSuit</h3>
                 <h4>Co-Founder / CTO</h4>
-                <p><i>Bringing the power of AI to commercial real estate deal execution</i></p><br/>
+                <p><i>Bringing the power of AI to commercial real estate documents</i></p><br/>
                 <ul>
-                    <li>Wrote the frontend and backend code powering the successful BlueSuit Beta</li>
                     <li>Completed the 3-month <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a> with my cofounders</li>
-                    <li>Building a world-class product with a world-class technical team</li>
+                    <li>Architected &amp; built the BlueSuit web app MVP; architected all cloud infrastructure powering our ML APIs and pipelines</li>
+                    <li>Managed a technical team</li>
                 </ul>
             </div>
 
@@ -247,21 +246,32 @@
             <li>Apollo</li>
             <li>GraphQL</li>
             <li>REST</li>
+            <li>Django</li>
+            <li>Celery</li>
+            <li>Pandas</li>
+            <li>PyTorch</li>
+            <li>SKLearn</li>
             <li>Node</li>
             <li>Koa</li>
             <li>Express</li>
+            <li>iOS</li>
             <li>Salesforce</li>
-            <li>Django</li>
             <li>Heroku</li>
             <li>AWS</li>
-            <li>Terraform</li>
+            <li>IAM</li>
+            <li>VPC</li>
+            <li>API Gateway</li>
+            <li>Lambda</li>
+            <li>EventBridge</li>
+            <li>S3</li>
+            <li>CI/CD</li>
+            <li>Docker</li>
+            <li>Git</li>
             <li>Serverless</li>
+            <li>Terraform</li>
             <li>PostgreSQL</li>
             <li>MySQL</li>
             <li>MSSQL</li>
-            <li>iOS</li>
-            <li>Docker</li>
-            <li>Git</li>
         </ul>
     </div>
     <!-- End #skills -->
