--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <p><i>Bringing the power of AI to commercial real estate documents</i></p><br/>
                 <ul>
                     <li>Completed the 3-month <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a> with my cofounders</li>
-                    <li>Architected &amp; built the BlueSuit web app MVP; architected all cloud infrastructure powering our ML APIs and pipelines</li>
+                    <li>Architected &amp; built the BlueSuit web app MVP (React/Apollo/Django/PostgreSQL)</li>
+                    <li>Architected all cloud infrastructure powering our machine learning APIs and pipelines</li>
+                    <li>Established processes for deployments, code reviews, and infrastructure-as-code</li>
                     <li>Managed a technical team</li>
                 </ul>
             </div>
