--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Dylan Bohlender</h1>
             <h2>Senior Software Engineer / Engineering Manager</h2>
-            <a href="assets/Dylan Bohlender Resume 2020:08.pdf" class="btn-rounded-white" download="Dylan Bohlender Resume.pdf">Download Resume</a>
+            <a href="assets/Dylan Bohlender Resume 2021:09.pdf" class="btn-rounded-white" download="Dylan Bohlender Resume.pdf">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -92,13 +92,13 @@
             <div data-date="Jan 2019 – Present">
                 <h3>BlueSuit</h3>
                 <h4>Co-Founder / CTO</h4>
-                <p><i>Bringing the power of AI to commercial real estate documents</i></p><br/>
+                <p><i>Leveraging machine learning to extract structured data from real estate documents</i></p><br/>
                 <ul>
-                    <li>Completed the 3-month <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a> with my cofounders</li>
-                    <li>Architected &amp; built the BlueSuit web app MVP (React/Apollo/Django/PostgreSQL)</li>
-                    <li>Architected all cloud infrastructure powering our machine learning APIs and pipelines</li>
-                    <li>Established processes for deployments, code reviews, and infrastructure-as-code</li>
-                    <li>Managed a technical team</li>
+                    <li>Graduated from the 2019 <a href="https://www.techstars.com/content/accelerators/announcing-2019-class-colliers-proptech-accelerator-powered-techstars/">TechStars/Colliers Proptech Accelerator</a></li>
+                    <li>Managed a technical team of software engineers &amp; data scientists</li>
+                    <li>Architected &amp; coded web apps, APIs, &amp; machine learning pipelines</li>
+                    <li>Established processes for CI/CD, code reviews, technical RFCs, &amp; cloud infrastructure-as-code</li>
+                    <li>Successfully executed a company pivot from web-based SaaS products to API products</li>
                 </ul>
             </div>
 
@@ -228,11 +228,12 @@
     <!-- End #education -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Technical Skills</h2>
         <ul>
             <li>Python</li>
             <li>JavaScript</li>
             <li>TypeScript</li>
+            <li>HCL</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Java</li>
@@ -249,23 +250,24 @@
             <li>GraphQL</li>
             <li>REST</li>
             <li>Django</li>
+            <li>Flask</li>
             <li>Celery</li>
-            <li>Pandas</li>
             <li>PyTorch</li>
+            <li>TensorFlow</li>
             <li>SKLearn</li>
             <li>Node</li>
-            <li>Koa</li>
+            <li>Next</li>
             <li>Express</li>
-            <li>iOS</li>
-            <li>Salesforce</li>
-            <li>Heroku</li>
             <li>AWS</li>
-            <li>IAM</li>
-            <li>VPC</li>
-            <li>API Gateway</li>
+            <li>Heroku</li>
+            <li>Salesforce</li>
+            <li>iOS</li>
             <li>Lambda</li>
+            <li>API Gateway</li>
             <li>EventBridge</li>
             <li>S3</li>
+            <li>RDS</li>
+            <li>Many more AWS acronyms...</li>
             <li>CI/CD</li>
             <li>Docker</li>
             <li>Git</li>
@@ -274,6 +276,7 @@
             <li>PostgreSQL</li>
             <li>MySQL</li>
             <li>MSSQL</li>
+            <li>MongoDB</li>
         </ul>
     </div>
     <!-- End #skills -->
