--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#technical-skills">Technical Skills</a>
             </li>
             <li>
                 <a href="#certifications">Certifications</a>
@@ -227,7 +227,7 @@
         </div>
     <!-- End #education -->
 
-    <div id="skills">
+    <div id="technical-skills">
         <h2 class="heading">Technical Skills</h2>
         <ul>
             <li>Python</li>
@@ -279,7 +279,7 @@
             <li>MongoDB</li>
         </ul>
     </div>
-    <!-- End #skills -->
+    <!-- End #technical-skills -->
 
     <div id="certifications" class="background-alt">
         <h2 class="heading">Certifications</h2>
@@ -331,7 +331,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-                    <p>Copyright &copy; 2018 DYLAN BOHLENDER</p>
+                    <p>Copyright &copy; 2021 DYLAN BOHLENDER</p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
