Update About Me section

--- a/index.html
+++ b/index.html
@@ -75,11 +75,15 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>I’m a Senior Software Engineer or Engineering Manager - whatever the situation requires. I'm well-versed in web, mobile, cloud, and enterprise SaaS development.</p>
+                    <p>I’m a Senior Software Engineer or Engineering Manager - whatever the situation requires. I'm well-versed in web, cloud, mobile, and enterprise SaaS development. I'm a great communicator, and I love bringing ideas and aspirations to life.</p>
                     <br/>
-                    <p>As an IC I'm capable at all layers of the software stack; as a manager I'm capable of managing engineers of all skill levels.</p>
+                    <p>As an IC, I can add value at most layers of the software stack. I'm very comfortable with complex tasks that require investigation, ambiguity resolution, and systems-level thinking. Solving important problems with code is extremely fulfilling to me.</p>
                     <br/>
-                    <p>I also make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games. When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
+                    <p>As an EM, I can add value by creating a high-trust environment where each individual can grow and flourish. I believe that a solid foundation of interpersonal trust is the secret to high achievement. I enjoy being a force multiplier, I delight in building teams, and I love the challenge of creating shared purpose.</p>
+                    <br/>
+                    <p>In my free time, I make <a href="games.html">games</a> for fun – sometimes my own, and sometimes mods or levels for existing games.</p>
+                    <br/>
+                    <p>When I’m not at a computer, you can probably track me down at a hockey rink or find me causing trouble all around Denver, CO.</p>
                 </div>
             </div>
         </div>
